@@ -1,8 +1,6 @@
-// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.ui;
 
-import com.intellij.ide.ui.LafManager;
-import com.intellij.ide.ui.LafManagerListener;
 import com.intellij.ide.ui.UISettings;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.editor.colors.EditorColorsManager;
@@ -23,7 +21,6 @@ import javax.swing.*;
 import javax.swing.plaf.ColorUIResource;
 import javax.swing.plaf.FontUIResource;
 import java.awt.*;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -45,10 +42,6 @@ public final class ExperimentalUI {
     return EarlyAccessRegistryManager.INSTANCE.getBoolean(KEY);
   }
 
-  public static boolean isNewToolWindowsStripes() {
-    return isEnabled("ide.experimental.ui.toolwindow.stripes");
-  }
-
   public static boolean isNewEditorTabs() {
     return isEnabled("ide.experimental.ui.editor.tabs");
   }
@@ -58,13 +51,11 @@ public final class ExperimentalUI {
   }
 
   public static boolean isNewToolbar() {
-    //return isEnabled("ide.experimental.ui.main.toolbar");
-    return EarlyAccessRegistryManager.INSTANCE.getBoolean("ide.experimental.ui.main.toolbar");
+    return isEnabled("ide.experimental.ui.main.toolbar");
   }
 
   private static boolean isEnabled(@NonNls @NotNull String key) {
-    return ApplicationManager.getApplication().isEAP()
-           && (isNewUI() || EarlyAccessRegistryManager.INSTANCE.getBoolean(key));
+    return ApplicationManager.getApplication().isEAP() && (isNewUI() || EarlyAccessRegistryManager.INSTANCE.getBoolean(key));
   }
 
   @SuppressWarnings("unused")
@@ -96,26 +87,30 @@ public final class ExperimentalUI {
     }
   }
 
-  @SuppressWarnings("unused")
-  private static final class NewUiLafManagerListener implements LafManagerListener {
-    @Override
-    public void lookAndFeelChanged(@NotNull LafManager source) {
-      if (isNewUI()) {
-        if (isIconPatcherSet.compareAndSet(false, true)) {
-          IconLoader.installPathPatcher(iconPathPatcher);
-        }
-        patchUIDefaults(true);
+  public static void lookAndFeelChanged() {
+    if (isNewUI()) {
+      if (isIconPatcherSet.compareAndSet(false, true)) {
+        IconLoader.installPathPatcher(iconPathPatcher);
       }
+      patchUIDefaults(true);
     }
   }
 
   private static IconPathPatcher createPathPatcher() {
     Map<String, String> paths = new HashMap<>();
-    paths.put("actions/collapseall.svg", "/expui/actions/collapseAll.svg");
-    paths.put("actions/expandall.svg", "/expui/actions/expandAll.svg");
+    paths.put("actions/collapseall.svg", "/expui/general/collapseAll.svg");
+    paths.put("actions/expandall.svg", "/expui/general/expandAll.svg");
+    paths.put("actions/back.svg", "/expui/general/left.svg");
+    paths.put("actions/forward.svg", "/expui/general/right.svg");
+    paths.put("actions/previousOccurence.svg", "/expui/general/up.svg");
+    paths.put("actions/nextOccurence.svg", "/expui/general/down.svg");
+    paths.put("actions/refresh.svg", "/expui/general/refresh.svg");
+    paths.put("general/add.svg", "/expui/general/add.svg");
+    paths.put("general/remove.svg", "/expui/general/remove.svg");
     paths.put("nodes/class.svg", "/expui/nodes/class.svg");
     paths.put("nodes/folder.svg", "/expui/nodes/folder.svg");
     paths.put("nodes/interface.svg", "/expui/nodes/interface.svg");
+    paths.put("nodes/Module.svg", "/expui/nodes/module.svg");
     paths.put("nodes/ppLib.svg", "/expui/nodes/library.svg");
     paths.put("modules/excludeRoot.svg", "/expui/nodes/excludeRoot.svg");
     paths.put("modules/sourceRoot.svg", "/expui/nodes/sourceRoot.svg");
@@ -126,13 +121,18 @@ public final class ExperimentalUI {
     paths.put("toolwindows/toolWindowCommit.svg", "/expui/toolwindow/commit.svg");
     paths.put("icons/toolWindowDatabase.svg", "/expui/toolwindow/database.svg");
     paths.put("toolwindows/toolWindowDebugger.svg", "/expui/toolwindow/debug.svg");
+    paths.put("toolwindows/toolWindowModuleDependencies.svg", "/expui/toolwindow/dependencies.svg");
     paths.put("toolwindows/documentation.svg", "/expui/toolwindow/documentation.svg");
+    paths.put("icons/toolWindowEndpoints.svg", "/expui/toolwindow/endpoints.svg");
     paths.put("icons/toolWindowGradle.svg", "/expui/toolwindow/gradle.svg");
     paths.put("toolwindows/toolWindowHierarchy.svg", "/expui/toolwindow/hierarchy.svg");
+    paths.put("img/featureTrainerToolWindow.svg", "/expui/toolwindow/learn.svg");
     paths.put("images/toolWindowMaven.svg", "/expui/toolwindow/maven.svg");
     paths.put("toolwindows/toolWindowProblems.svg", "/expui/toolwindow/problems.svg");
+    paths.put("toolwindows/toolWindowProblemsEmpty.svg", "/expui/toolwindow/problems.svg");
     paths.put("toolwindows/toolWindowProfiler.svg", "/expui/toolwindow/profiler.svg");
     paths.put("toolwindows/toolWindowProject.svg", "/expui/toolwindow/project.svg");
+    paths.put("org/jetbrains/plugins/github/pullRequestsToolWindow.svg", "/expui/toolwindow/pullRequests.svg");
     paths.put("toolwindows/toolWindowRun.svg", "/expui/toolwindow/run.svg");
     paths.put("toolwindows/toolWindowServices.svg", "/expui/toolwindow/services.svg");
     paths.put("toolwindows/toolWindowStructure.svg", "/expui/toolwindow/structure.svg");
@@ -140,7 +140,9 @@ public final class ExperimentalUI {
     paths.put("toolwindows/toolWindowTodo.svg", "/expui/toolwindow/todo.svg");
     paths.put("toolwindows/toolWindowChanges.svg", "/expui/toolwindow/vcs.svg");
     paths.put("toolwindows/webToolWindow.svg", "/expui/toolwindow/web.svg");
+    paths.put("toolwindows/toolWindowFind.svg", "/expui/toolwindow/find.svg");
     paths.put("actions/more.svg", "/expui/general/moreVertical.svg");
+    paths.put("actions/moreHorizontal.svg", "/expui/general/moreHorizontal.svg");
     paths.put("general/hideToolWindow.svg", "/expui/general/close.svg");
     paths.put("actions/find.svg", "/expui/general/search.svg");
     paths.put("general/gearPlain.svg", "/expui/general/settings.svg");
@@ -149,6 +151,37 @@ public final class ExperimentalUI {
     paths.put("general/chevron-right.svg", "expui/general/chevronRight.svg");
     paths.put("general/chevron-up.svg", "expui/general/chevronUp.svg");
     paths.put("vcs/branch.svg", "expui/toolwindow/vcs.svg");
+    paths.put("icons/Docker.svg", "expui/fileTypes/docker.svg");
+    paths.put("icons/DockerFile_1.svg", "expui/fileTypes/docker.svg");
+    paths.put("icons/gradle.svg", "expui/fileTypes/gradle.svg");
+    paths.put("icons/gradleFile.svg", "expui/fileTypes/gradle.svg");
+    paths.put("nodes/ideaModule.svg", "expui/fileTypes/ideaModule.svg");
+    paths.put("nodes/editorconfig.svg", "/expui/fileTypes/editorConfig.svg");
+    paths.put("fileTypes/css.svg", "expui/fileTypes/css.svg");
+    paths.put("fileTypes/html.svg", "expui/fileTypes/html.svg");
+    paths.put("fileTypes/java.svg", "expui/fileTypes/java.svg");
+    paths.put("fileTypes/javaScript.svg", "expui/fileTypes/javascript.svg");
+    paths.put("fileTypes/json.svg", "expui/fileTypes/json.svg");
+    paths.put("fileTypes/manifest.svg", "expui/fileTypes/manifest.svg");
+    paths.put("icons/php-icon.svg", "expui/fileTypes/php.svg");
+    paths.put("fileTypes/properties.svg", "expui/fileTypes/properties.svg");
+    paths.put("icons/ruby/ruby.svg", "expui/fileTypes/ruby.svg");
+    paths.put("icons/ruby/ruby_file.svg", "expui/fileTypes/ruby.svg");
+    paths.put("icons/sql.svg", "expui/fileTypes/sql.svg");
+    paths.put("fileTypes/text.svg", "expui/fileTypes/text.svg");
+    paths.put("icons/fileTypes/TypeScriptFile.svg", "expui/fileTypes/typescript.svg");
+    paths.put("fileTypes/unknown.svg", "expui/fileTypes/unknown.svg");
+    paths.put("fileTypes/xml.svg", "expui/fileTypes/xml.svg");
+    paths.put("fileTypes/yaml.svg", "expui/fileTypes/yaml.svg");
+    paths.put("fileTypes/archive.svg", "/expui/fileTypes/archive.svg");
+    paths.put("org/intellij/images/icons/ImagesFileType.svg", "/expui/fileTypes/image.svg");
+    paths.put("org/jetbrains/plugins/sass/sass.svg", "/expui/fileTypes/scss.svg");
+    paths.put("icons/shFile.svg", "/expui/fileTypes/shell.svg");
+    paths.put("icons/MarkdownPlugin.svg", "/expui/fileTypes/markdown.svg");
+    paths.put("actions/execute.svg", "expui/run/run.svg");
+    paths.put("actions/startDebugger.svg", "expui/run/debug.svg");
+    paths.put("actions/restart.svg", "expui/run/restart.svg");
+    paths.put("actions/suspend.svg", "expui/run/stop.svg");
     return new IconPathPatcher() {
       @Override
       public @Nullable String patchPath(@NotNull String path, @Nullable ClassLoader classLoader) {
@@ -156,8 +189,7 @@ public final class ExperimentalUI {
       }
 
       @Override
-      public @Nullable ClassLoader getContextClassLoader(@NotNull String path,
-                                                         @Nullable ClassLoader originalClassLoader) {
+      public @Nullable ClassLoader getContextClassLoader(@NotNull String path, @Nullable ClassLoader originalClassLoader) {
         return getClass().getClassLoader();
       }
     };
@@ -172,12 +204,14 @@ public final class ExperimentalUI {
     setUIProperty("EditorTabs.underlineArc", 4, defaults);
     setUIProperty("ToolWindow.Button.selectedBackground", new ColorUIResource(0x3573f0), defaults);
     setUIProperty("ToolWindow.Button.selectedForeground", new ColorUIResource(0xffffff), defaults);
-    EditorColorsScheme editorColorScheme = EditorColorsManager.getInstance().getGlobalScheme();
-    Color tabsHover = ColorUtil.mix(JBColor.PanelBackground, editorColorScheme.getDefaultBackground(), 0.5);
-    setUIProperty("EditorTabs.hoverInactiveBackground", tabsHover, defaults);
+    // avoid getting EditorColorsManager too early
+    setUIProperty("EditorTabs.hoverInactiveBackground", (UIDefaults.LazyValue)__ -> {
+      EditorColorsScheme editorColorScheme = EditorColorsManager.getInstance().getGlobalScheme();
+      return ColorUtil.mix(JBColor.PanelBackground, editorColorScheme.getDefaultBackground(), 0.5);
+    }, defaults);
 
     if (SystemInfo.isJetBrainsJvm && EarlyAccessRegistryManager.INSTANCE.getBoolean("ide.experimental.ui.inter.font")) {
-      installInterFont();
+      installInterFont(defaults);
     }
   }
 
@@ -186,22 +220,20 @@ public final class ExperimentalUI {
     defaults.put(key, value);
   }
 
-  private static void installInterFont() {
-    UIDefaults defaults = UIManager.getDefaults();
-    List<String> keysToPatch = Arrays.asList("CheckBoxMenuItem.acceleratorFont",
-                                             "CheckBoxMenuItem.font",
-                                             "Menu.acceleratorFont",
-                                             "Menu.font",
-                                             //"MenuBar.font",
-                                             "MenuItem.acceleratorFont",
-                                             "MenuItem.font",
-                                             "PopupMenu.font",
-                                             "RadioButtonMenuItem.acceleratorFont",
-                                             "RadioButtonMenuItem.font");
+  private static void installInterFont(UIDefaults defaults) {
+    List<String> keysToPatch = List.of("CheckBoxMenuItem.acceleratorFont",
+                                       "CheckBoxMenuItem.font",
+                                       "Menu.acceleratorFont",
+                                       "Menu.font",
+                                       //"MenuBar.font",
+                                       "MenuItem.acceleratorFont",
+                                       "MenuItem.font",
+                                       "PopupMenu.font",
+                                       "RadioButtonMenuItem.acceleratorFont",
+                                       "RadioButtonMenuItem.font");
     for (String key : keysToPatch) {
-      Font font = UIManager.getFont(key);
-      Font inter = new FontUIResource("Inter", font.getStyle(), font.getSize());
-      defaults.put(key, inter);
+      Font font = defaults.getFont(key);
+      defaults.put(key, new FontUIResource("Inter", font.getStyle(), font.getSize()));
     }
 
     //if (JBColor.isBright()) {
